--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@apollo/client": "^3.5.10",
     "@walletconnect/web3-provider": "^1.7.5",
     "ethers": "^5.6.1",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "sacredrealm-core": "^1.0.0"
   },
   "devDependencies": {
     "tsdx": "^0.14.1"
