--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sacredrealm-sdk",
-  "version": "1.0.11",
+  "name": "sealemlab-sdk",
+  "version": "1.0.12",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
@@ -10,20 +10,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sacred-Realm/sacredrealm-sdk.git"
+    "url": "git+https://github.com/sealemlab/sealemlab-sdk.git"
   },
   "author": "SEALEM-LAB",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Sacred-Realm/sacredrealm-sdk/issues"
+    "url": "https://github.com/sealemlab/sealemlab-sdk/issues"
   },
-  "homepage": "https://github.com/Sacred-Realm/sacredrealm-sdk#readme",
+  "homepage": "https://github.com/sealemlab/sealemlab-sdk#readme",
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@walletconnect/web3-provider": "^1.7.5",
     "ethers": "^5.6.1",
     "graphql": "^16.3.0",
-    "sacredrealm-core": "^1.0.11"
+    "sealemlab-core": "^1.0.12"
   },
   "devDependencies": {
     "tsdx": "^0.14.1"
